# amman-python-401d2

./: README.md
array_binary/: array_binary.py  readme.md
array_shift/: array_shift.py  readme.md
class-02/demo/fizz-buzz/: README.md  pyproject.toml
class-02/demo/recursion/: pyproject.toml
class-03/demo/expections/: pyproject.toml
class-03/demo/file-io/: pyproject.toml
class-03/lab/: Madlibe_example.md
class-04/demo/pets-shelter/: pyproject.toml
class-09/demo/: change_bahaviour.py  player_bot.py
class-10/demo/stacks-queues/: pyproject.toml
class-11/demo/: code_challenge_review.md
class-11/demo/chess-board/: chess_board.ipynb  pyproject.toml
class-11/demo/examples/: basic_demo.ipynb  hello_numpy.ipynb  img.ipynb  pyproject.toml
class-11/lab/: chess_board_starter.ipynb
class-12/demo/covid-19/: code_challenge_notes.md  covid19.ipynb  pyproject.toml
class-13/demo/salary/: pyproject.toml  salary.ipynb
class-13/lab/: README.md
class-14/code-challenge-review/: brackets_validation.py
class-14/demo/fun-with-seaborn/: pyproject.toml  visualize.ipynb
class-16/lab/: README.md
class-17/demo/monster-jobs/: data.json  pyproject.toml
class-19/demo/: fake_text.txt
class-19/demo/fake-data/: pyproject.toml
class-27/demo/snack_app/: db.sqlite3  pyproject.toml
class-28/demo/snack_app/: db.sqlite3  pyproject.toml
class-28/demo/snack_app/snacks/: models.py  tests.py  urls.py  views.py
class-28/demo/snack_app/snacks/migrations/: 0001_initial.py
class-28/demo/snack_app/snacks_project/: settings.py
class-28/demo/snack_app/templates/: base.html  home.html  snack_create.html  snack_delete.html  snack_details.html  snack_update.html
class-29/demo/custom_user/: db.sqlite3
class-31/demo/blogapi/: db.sqlite3
class-32/demo/blogapi-permissions/: db.sqlite3  pyproject.toml  requirements.txt
class-32/demo/blogapi-postgres/: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
class-33/: code_challenge_mock_interviews.md
class-33/demo/blogapi-permissions/: db.sqlite3  pyproject.toml  requirements.txt
class-34/demo/blogapi-deployment/: db.sqlite3  pyproject.toml  requirements.txt
class-37/demo/basicapp/: .eslintcache  package-lock.json  package.json
class-37/demo/es6/: es6.js
class-38/demo/snacks/: .eslintcache  package-lock.json  package.json
class-39/: code_challenge_38.md
class-39/demo/first-app/: package-lock.json  (+1 more)
class-40/demo/: graphs.py
test/: test_array_binary.py  test_array_shift.py
(+81 files in other folders)
